opam-version: "2.0"
name: "xmlplaylist"
version: "0.1.4"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
homepage: "https://github.com/savonet/ocaml-xmlplaylist"
synopsis: "Library to parse various file playlists in XML format"
build: [
  ["./bootstrap"] {pinned}
  ["./configure" "--prefix" prefix]
  [make "clean"] {pinned}
  [make]
]
install: [
  [make "install"]
]
depends: [
  "ocaml"
  "ocamlfind" {build}
  "xmlm"
]
bug-reports: "https://github.com/savonet/ocaml-xmlplaylist/issues"
dev-repo: "git+https://github.com/savonet/ocaml-xmlplaylist.git"
synopsis: "Library to parse various file playlists in XML format"
